--- a/Front/src/style/componentStyles.css
+++ b/Front/src/style/componentStyles.css
@@ -1,6 +1,7 @@
 /*Components activity-chart*/
 .activity-chart {
   width: 100%;
+  height:320px;
   background-color: #fbfbfb;
   border-radius: 5px;
 }
@@ -48,17 +49,19 @@
 }
 
 .performance-chart {
+
   align-items: center;
   background-color: #282d30;
-  width: 32%;
+  width: 31%;
   height: 263px;
+  min-width: 270px;
   max-width: 600px;
-  min-width: 150px;
   border-radius: 5px;
 }
 
 /*Components AverageChart */
 .average-chart {
+  min-width: 270px;
   width: 31%;
   height: 263px;
   border-radius: 5px;
@@ -100,15 +103,17 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 263px;
+  height: 215px;
+  padding:24px 0;
   width: 31%;
+  min-width: 270px;
   background: #FBFBFB;
 border-radius: 5px;
 }
 .score-chart__title {
   max-width: 214px;
   width: 100%;
-  margin: 24 auto 0;
+ margin-bottom:0px ;
   text-align: left;
   font-family: "Roboto";
   font-style: normal;
@@ -118,6 +123,7 @@ border-radius: 5px;
 }
 .score-chart__value{
   position: absolute;
+  margin-top: 32px;
 }
 .score-chart__value h2 {
   text-align: center;
